--- a/src/Xamarin.Auth.iOS/Xamarin.Auth.iOS.csproj
+++ b/src/Xamarin.Auth.iOS/Xamarin.Auth.iOS.csproj
@@ -9,6 +9,8 @@
     <RootNamespace>Xamarin.Auth.iOS</RootNamespace>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
     <AssemblyName>Xamarin.Auth.iOS</AssemblyName>
+    <BaseIntermediateOutputPath>obj\unified</BaseIntermediateOutputPath>
+    <ReleaseVersion>1.1</ReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>True</DebugSymbols>
